[project]
name = "fastbridge"
version = "0.1.0"
description = "Smart contracts for FastBridge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "pytest>=8.3.4",
    "pytest-xdist>=3.8.0",
    "snekmate>=0.1.2",
    "titanoboa>=0.2.7",
    "vyper==0.4.3",
    "web3>=7.12.1",
]
